--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.0.7
 aniso8601==4.1.0
 appdirs==1.4.3
 attrs==18.2.0
@@ -6,14 +7,24 @@ Click==7.0
 entrypoints==0.3
 flake8==3.7.5
 Flask==1.0.2
+flask-marshmallow==0.9.0
+Flask-Migrate==2.3.1
 Flask-RESTful==0.3.7
+Flask-SQLAlchemy==2.3.2
 itsdangerous==1.1.0
 Jinja2==2.10
+Mako==1.0.7
 MarkupSafe==1.1.0
+marshmallow==2.18.0
+marshmallow-sqlalchemy==0.16.0
 mccabe==0.6.1
+psycopg2==2.7.7
 pycodestyle==2.5.0
 pyflakes==2.1.0
+python-dateutil==2.8.0
+python-editor==1.0.4
 pytz==2018.9
 six==1.12.0
+SQLAlchemy==1.2.17
 toml==0.10.0
 Werkzeug==0.14.1
