--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ psycopg2==2.7.7
 pycodestyle==2.5.0
 pyflakes==2.1.0
 python-dateutil==2.8.0
+python-dotenv==0.10.1
 python-editor==1.0.4
 pytz==2018.9
 six==1.12.0
