--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ Click==7.0
 entrypoints==0.3
 flake8==3.7.5
 Flask==1.0.2
+Flask-HTTPAuth==3.2.4
 flask-marshmallow==0.9.0
 Flask-Migrate==2.3.1
 Flask-RESTful==0.3.7
@@ -15,10 +16,12 @@ itsdangerous==1.1.0
 Jinja2==2.10
 Mako==1.0.7
 MarkupSafe==1.1.0
-marshmallow==2.18.0
+marshmallow==3.0.0rc4
 marshmallow-sqlalchemy==0.16.0
 mccabe==0.6.1
+passlib==1.7.1
 psycopg2==2.7.7
+psycopg2-binary==2.7.7
 pycodestyle==2.5.0
 pyflakes==2.1.0
 python-dateutil==2.8.0
